fix: flex-wrap property

--- a/src/components/badge/badge.scss
+++ b/src/components/badge/badge.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 280px;
   height: 69px;
   border-bottom: 1px solid $dark-shade_few;
