--- a/src/components/bullet-checkbox/__item/bullet-checkbox__item.scss
+++ b/src/components/bullet-checkbox/__item/bullet-checkbox__item.scss
@@ -7,7 +7,7 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: flex-start;
-      flex-wrap: 1 0 nowrap;
+      flex-wrap: nowrap;
     }
   
     &__icon {
