--- a/src/components/bullet-checkbox/bullet-checkbox.scss
+++ b/src/components/bullet-checkbox/bullet-checkbox.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 292px;
   height: 142px;
 
