--- a/src/components/button-link/button-link.scss
+++ b/src/components/button-link/button-link.scss
@@ -75,7 +75,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: calc(100% - 4px);
   height: calc(100% - 4px);
   min-width: 70px;
