--- a/src/components/button-rate/button-rate.scss
+++ b/src/components/button-rate/button-rate.scss
@@ -5,7 +5,7 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 120px;
   height: fit-content;
   font-size: 29px;
