--- a/src/components/card-search/card-search.scss
+++ b/src/components/card-search/card-search.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 380px;
   height: 374px;
   padding: 39px 29px 0 29px;
