--- a/src/components/card-singin/card-signin.scss
+++ b/src/components/card-singin/card-signin.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: fit-content;
   min-height: 358px;
