--- a/src/components/date-range/date-range.scss
+++ b/src/components/date-range/date-range.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: 100%;
   min-width: 260px;
