--- a/src/components/donut-chart/donut-chart.scss
+++ b/src/components/donut-chart/donut-chart.scss
@@ -21,7 +21,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 315px;
   height: 126px;
   margin: 22px 0 0;
